--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -108,6 +108,16 @@
         @apply w-full;
       }
       
+      .dashboard_li_item::before {
+        content: "";
+        @apply absolute bottom-0 left-0 h-[2px] w-0 bg-blue-750 dark:bg-white transition-all ease-in-out duration-200 ;
+      }
+
+      .dashboard_li_item:hover::before {
+        @apply w-full px-2;
+      }
+      
+      
       .will-change-blur {
         will-change: backdrop-filter;
       }
