phone_verification_done

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -247,6 +247,12 @@
     .social-icon {
         @apply w-12 h-12 rounded-full flex justify-center items-center bg-black-300 border border-black-200;
     }
+
+    .scrollbar-none{
+        -ms-overflow-style: none;
+        scrollbar-width: none;
+        
+    }
 }
 
 .waving-hand {
