--- a/frontend/src/sass/Toast.module.scss
+++ b/frontend/src/sass/Toast.module.scss
@@ -5,6 +5,7 @@
     bottom: 1rem;
     right: 1rem;
     z-index: 9999;
+    width: fit-content;
   
     .Toastify__toast {
       padding: 16px 24px;
