adding_video_backend

--- a/frontend/src/sass/Toast.module.scss
+++ b/frontend/src/sass/Toast.module.scss
@@ -6,6 +6,7 @@
     right: 1rem;
     z-index: 9999;
     width: fit-content;
+    min-width: 20%;
   
     .Toastify__toast {
       padding: 16px 24px;
